--- a/story/storysource/Stamen Toner - Simple.htm
+++ b/story/storysource/Stamen Toner - Simple.htm
@@ -25,7 +25,7 @@
             source: new ol.source.Stamen({
               layer: 'toner'
             })
-          })
+          }){{qgisLayers}}
         ],
         view: new ol.View({
           center: ol.proj.fromLonLat({{startPosition}}), //Start Position  [lon, lat]]
