--- a/story/storysource/Stamen Water Color - Simple.htm
+++ b/story/storysource/Stamen Water Color - Simple.htm
@@ -25,7 +25,7 @@
             source: new ol.source.Stamen({
               layer: 'watercolor'
             })
-          })
+          }){{qgisLayers}}
         ],
         view: new ol.View({
           center: ol.proj.fromLonLat({{startPosition}}), //Start Position  [lon, lat]]
